--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,28 @@
-.directory
-bin
+.*
+!.gitignore
+*.iml
 target
-*.class
-
-# Package Files #
 *.jar
 *.war
-*.ear
+*~
+*.class
+*.lock
+*.DS_Store
+*.swp
+*.out
+target/
+*.iml
+*.ipr
+*.iws
+*.bak
+.settings/
+.classpath
+.project
+.metadata/
+.idea/
+logs/
+*.log
+dependency-reduced-pom.xml
+/bin
+*/bin
+*.lnk
